[tool.poetry]
name = "baret"
version = "0.1.0"
description = "Mysql (binary) backup and recovery tool"
authors = ["Arunas Grigalionis <arunas.grigalionis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
